--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ h1 {
 .home {
   position: relative;
   width: 100%;
+  height: 90vh;
   display: flex;
 }
 
@@ -86,7 +87,7 @@ h1 {
 }
 
 .home .left {
-  width: 4%;
+  width: 3%;
   padding: 5% 0 0 10%;
   display: flex;
   flex-direction: column;
@@ -94,16 +95,18 @@ h1 {
 }
 
 .home .right {
-  width: 30%;
-  font-size: 7em;
-  font-weight: 600;
-  line-height: 1.5em;
-  padding: 8% 10%;
+  width: 70%;
+  font-size: 4.5em;
+  font-weight: 700;
+  line-height: 2.5em;
+  padding: 5% 3% 8% 10%; 
 }
 
 .home img {
-  padding-top: 3%;
-  height: 100%;
+  position: absolute;
+  right: 3%;
+  top: 15%;
+  height: 60%;
   z-index: -1;
 }
 
@@ -114,6 +117,7 @@ h1 {
 }
 
 .about {
+  height: 90vh;
   padding: 2% 10%;
   color: white;
   font-weight: 600;
@@ -124,14 +128,11 @@ h1 {
   background-attachment: fixed;
 }
 
-.about_description {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.about div {
-  padding: 0 20px;
-  font-size: 1.2em;
+.about_description{
+  font-size: 1.5em;
+  line-height: 2em;
+  text-align: center;
+  margin: auto;
 }
 
 /*=============== PORTFOLIO ===============*/
