--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ h1 {
   color: white;
   font-weight: 600;
   text-shadow: 5px 2px 10px rgba(0, 0, 0, 0.5);
-  background: url(/assets/img/wallpaper.jpg);
+  background: url(../img/wallpaper.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -180,29 +180,10 @@ h1 {
   cursor: grabbing;
 }
 
-.card-1 {
-  background: url(/assets/img/card-1.jpeg);
-  background-position: center;
-}
-
-.card-2 {
-  background: url(/assets/img/card-2.jpg);
-  background-position: center;
-}
-
-.card-3 {
-  background: url(/assets/img/card-3.jpg);
-  background-position: center;
-}
-
-.card-4 {
-  background: url(/assets/img/card-4.jpg);
-  background-position: center;
-}
-
 .img {
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   height: 100%;
   width: 100%;
   transition: transform 0.8s;
@@ -260,7 +241,6 @@ h1 {
 .services-details .image{
   width: 40%;
   height: 200px;
-  background-image: url("../img/card-1.jpeg");
   background-size: cover;
   background-clip: border-box;
   background-repeat: no-repeat;
@@ -648,11 +628,12 @@ svg {
   border-radius: 15px;
 }
 .blog-container h1{
-  font-size: 20px;
+  font-size: 15px;
   padding: 0;
   margin: 0;
 }
 .blog-container p{
+  font-size: 10px;
   padding: 0;
   margin: 0;
 }
