--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap");
 
 html {
   scroll-behavior: smooth;
@@ -10,7 +10,7 @@ body {
   padding: 0;
   background: #161e22;
   color: white;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /*=============== HEADER ===============*/
@@ -99,7 +99,7 @@ h1 {
   font-size: 4.5em;
   font-weight: 700;
   line-height: 2.5em;
-  padding: 5% 3% 8% 10%; 
+  padding: 5% 3% 8% 10%;
 }
 
 .home img {
@@ -128,7 +128,7 @@ h1 {
   background-attachment: fixed;
 }
 
-.about_description{
+.about_description {
   font-size: 1.5em;
   line-height: 2em;
   text-align: center;
@@ -137,8 +137,7 @@ h1 {
 
 /*=============== PORTFOLIO ===============*/
 
-
-.quote{
+.quote {
   width: 6%;
   padding-left: 7%;
 }
@@ -238,7 +237,7 @@ h1 {
   cursor: pointer;
 }
 
-.services-details .image{
+.services-details .image {
   width: 40%;
   height: 200px;
   background-size: cover;
@@ -248,7 +247,6 @@ h1 {
   border-radius: 15px;
   margin: 10px;
 }
-
 
 .services-list .title {
   font-size: 1.3rem;
@@ -265,7 +263,7 @@ h1 {
   gap: 20px;
 }
 
-.services-images{
+.services-images {
   height: 100%;
   width: 100%;
 }
@@ -323,7 +321,6 @@ svg {
   font-weight: 600;
 }
 
-
 #circles,
 #circles-2,
 #circles-3,
@@ -374,7 +371,6 @@ svg {
 .active-8 {
   animation: values-title-display 1.3s forwards;
 }
-
 
 @keyframes topRight {
   0% {
@@ -454,22 +450,18 @@ svg {
 
 #line-left-top {
   clip-path: inset(0% 0% 100% 100%);
-  
 }
 
 #line-left-center {
   clip-path: inset(0% 0% 100% 100%);
-
 }
 
 #line-left-bottom {
   clip-path: inset(0% 0% 100% 100%);
-
 }
 
 #line-right-top {
   clip-path: inset(0% 0% 100% 100%);
-
 }
 
 #line-right-center {
@@ -480,25 +472,24 @@ svg {
   clip-path: inset(0% 0% 100% 100%);
 }
 
-.active-1{
+.active-1 {
   animation: topLeft 2.3s 0.1s forwards;
 }
-.active-2{
+.active-2 {
   animation: LeftCenter 1.8s 1.5s forwards;
 }
-.active-3{
+.active-3 {
   animation: bottomLeft 2.8s 0.1s forwards;
 }
-.active-4{
+.active-4 {
   animation: topRight 2s 0.3s forwards;
 }
-.active-5{
+.active-5 {
   animation: rightCenter 2.5s 0.4s forwards;
 }
-.active-6{
+.active-6 {
   animation: bottomRight 3s 0.3s forwards;
 }
-
 
 @keyframes flashing {
   0% {
@@ -530,53 +521,59 @@ svg {
   }
 }
 
-#circles, #Transparency {
+#circles,
+#Transparency {
   opacity: 0%;
 }
 
-#circles-2, #Creativity {
+#circles-2,
+#Creativity {
   opacity: 0%;
 }
 
-#circles-3, #Responsibility {
+#circles-3,
+#Responsibility {
   opacity: 0%;
 }
 
-#circles-4, #Adaptability {
+#circles-4,
+#Adaptability {
   opacity: 0%;
 }
 
-#circles-5, #Collaboration {
+#circles-5,
+#Collaboration {
   opacity: 0%;
 }
 
-#circles-6, #Innovation {
+#circles-6,
+#Innovation {
   opacity: 0%;
 }
 
-.active-circle-1{
+.active-circle-1 {
   animation: flashing 0.5s 2s forwards;
 }
-.active-circle-2{
+.active-circle-2 {
   animation: flashing 0.5s 2.3s forwards;
 }
-.active-circle-3{
+.active-circle-3 {
   animation: flashing 0.5s 2.2s forwards;
 }
-.active-circle-4{
+.active-circle-4 {
   animation: flashing 0.5s 2.1s forwards;
 }
-.active-circle-5{
+.active-circle-5 {
   animation: flashing 0.5s 2.4s forwards;
 }
 
 /*=============== CONTACT US ===============*/
 
-.contact-form{
+.contact-form {
   padding-left: 20%;
 }
 
-.contact-input{
+.contact-input {
   position: relative;
   top: -100px;
   width: 30%;
@@ -590,9 +587,9 @@ svg {
   outline: none;
 }
 
-.contact-send{
+.contact-send {
   position: relative;
-  top: -80px;  
+  top: -80px;
   background: transparent;
   color: white;
   outline: none;
@@ -602,157 +599,156 @@ svg {
   padding-left: 5%;
 }
 
-.contact-form i{
+.contact-form i {
   position: relative;
   top: -80px;
   font-size: 1.5em;
 }
 
 /*=============== BLOG ===============*/
-.blog-grid{
+.blog-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* Creates four equal-width columns */
   gap: 20px;
   padding: 0 20%;
 }
 
-.blog-container{
+.blog-container {
   width: 100%;
   height: 100%;
   background-color: #0f161a;
   border-radius: 15px;
   padding: 5px;
 }
-.blog-container img{
+.blog-container img {
   width: 100%;
   border-radius: 15px;
 }
-.blog-container h1{
+.blog-container h1 {
   font-size: 15px;
   padding: 0;
   margin: 0;
 }
-.blog-container p{
+.blog-container p {
   font-size: 10px;
   padding: 0;
   margin: 0;
 }
 
-.blog-container a{
+.blog-container a {
   text-decoration: none;
   color: #ff4d00;
 }
 
 /*=============== FOOTER ===============*/
 
-
-.footer-distributed{
+.footer-distributed {
   background: #0f161a;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	font: bold 16px sans-serif;
-	padding: 55px 50px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: bold 16px sans-serif;
+  padding: 55px 50px;
   margin-top: 200px;
   border-top: 1px solid black;
 }
 
 .footer-distributed .footer-left,
 .footer-distributed .footer-center,
-.footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
+.footer-distributed .footer-right {
+  display: inline-block;
+  vertical-align: top;
 }
 
 /* Footer left */
 
-.footer-distributed .footer-left{
-	width: 40%;
+.footer-distributed .footer-left {
+  width: 40%;
 }
 
 /* The company logo */
 
-.footer-distributed h3{
-	color:  #ffffff;
-	font: normal 36px 'Open Sans', cursive;
-	margin: 0;
+.footer-distributed h3 {
+  color: #ffffff;
+  font: normal 36px "Open Sans", cursive;
+  margin: 0;
 }
 
-.footer-distributed h3 span{
-	color:  #ff4d00;
+.footer-distributed h3 span {
+  color: #ff4d00;
 }
 
 /* Footer links */
 
-.footer-distributed .footer-links{
-	color:  #ffffff;
-	margin: 20px 0 12px;
-	padding: 0;
+.footer-distributed .footer-links {
+  color: #ffffff;
+  margin: 20px 0 12px;
+  padding: 0;
 }
 
-.footer-distributed .footer-links a{
-	display:inline-block;
-	line-height: 1.8;
-  font-weight:400;
-	text-decoration: none;
-	color:  inherit;
+.footer-distributed .footer-links a {
+  display: inline-block;
+  line-height: 1.8;
+  font-weight: 400;
+  text-decoration: none;
+  color: inherit;
 }
 
-.footer-distributed .footer-company-name{
-	color:  #222;
-	font-size: 14px;
-	font-weight: normal;
-	margin: 0;
+.footer-distributed .footer-company-name {
+  color: #222;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 0;
 }
 
 /* Footer Center */
 
-.footer-distributed .footer-center{
-	width: 35%;
+.footer-distributed .footer-center {
+  width: 35%;
 }
 
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
+.footer-distributed .footer-center i {
+  background-color: #33383b;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  margin: 10px 15px;
+  vertical-align: middle;
 }
 
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
+.footer-distributed .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
 }
 
-.footer-distributed .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-  font-weight:400;
-	vertical-align: middle;
-	margin:0;
+.footer-distributed .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
 }
 
-.footer-distributed .footer-center p span{
-	display:block;
-	font-weight: normal;
-	font-size:14px;
-	line-height:2;
+.footer-distributed .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
 }
 
-.footer-distributed .footer-center p a{
-	color:  #ff4d00;
-	text-decoration: none;;
+.footer-distributed .footer-center p a {
+  color: #ff4d00;
+  text-decoration: none;
 }
 
 .footer-distributed .footer-links a:before {
   content: "|";
-  font-weight:300;
+  font-weight: 300;
   font-size: 20px;
   left: 0;
   color: #fff;
@@ -766,44 +762,43 @@ svg {
 
 /* Footer Right */
 
-.footer-distributed .footer-right{
-	width: 20%;
+.footer-distributed .footer-right {
+  width: 20%;
 }
 
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  #92999f;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
+.footer-distributed .footer-company-about {
+  line-height: 20px;
+  color: #92999f;
+  font-size: 13px;
+  font-weight: normal;
+  margin: 0;
 }
 
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 20px;
+.footer-distributed .footer-company-about span {
+  display: block;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-.footer-distributed .footer-icons{
-	margin-top: 25px;
+.footer-distributed .footer-icons {
+  margin-top: 25px;
 }
 
-.footer-distributed .footer-icons a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
-	background-color:  #33383b;
-	border-radius: 2px;
+.footer-distributed .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #33383b;
+  border-radius: 2px;
 
-	font-size: 20px;
-	color: #ffffff;
-	text-align: center;
-	line-height: 35px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
 
-	margin-right: 3px;
-	margin-bottom: 5px;
+  margin-right: 3px;
+  margin-bottom: 5px;
 }
-
