--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -927,7 +927,15 @@ h6 {
 
 /**********************edit-add*********************/
 .editform {
-  width: 100%;
+  width: 90%;
+  height: 90%;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 15px;
+  padding: 10px;
 }
 .contentedit {
   width: 100%;
@@ -939,7 +947,7 @@ h6 {
   font-family: "Poppins", sans-serif;
 }
 .contentedit h1 {
-  color: white !important;
+  color: black !important;
   text-align: start;
 }
 
@@ -953,9 +961,9 @@ h6 {
   padding: 10px;
   border-radius: 10px;
   width: 50%;
+  background-color: #fff;
   border: none;
-  outline: none;
-  background-color: white;
+  outline: 1px solid #f0f0f0;
   color: #01081f;
 }
 
